ass6_21CS30003_21CS30023/ass6_21CS30003_21CS30023.output
Terminals unused in grammar

    OTHERS
    TYPEDEF
    HASH


Rules useless in parser due to conflicts

    8 primary_expression: STRING_LITERAL


State 90 conflicts: 42 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 changetable: ε

    2 constant: INTEGER_CONST
    3         | FLOAT_CONST
    4         | CHAR_CONST
    5         | STRING_LITERAL

    6 primary_expression: IDENTIFIER
    7                   | constant
    8                   | STRING_LITERAL
    9                   | OPENRB expression CLOSERB

   10 postfix_expression: primary_expression
   11                   | postfix_expression OPENSB expression CLOSESB
   12                   | postfix_expression OPENRB argument_expression_list_opt CLOSERB
   13                   | postfix_expression DOT IDENTIFIER
   14                   | postfix_expression RIGHTARROW IDENTIFIER
   15                   | postfix_expression PLUSPLUS
   16                   | postfix_expression MINUSMINS
   17                   | OPENRB type_name CLOSERB OPENCB initializer_list CLOSECB
   18                   | OPENRB type_name CLOSERB OPENCB initializer_list COMMA CLOSECB

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list COMMA assignment_expression

   21 argument_expression_list_opt: argument_expression_list
   22                             | ε

   23 unary_expression: postfix_expression
   24                 | PLUSPLUS unary_expression
   25                 | MINUSMINS unary_expression
   26                 | unary_operator cast_expression
   27                 | SIZEOF unary_expression
   28                 | SIZEOF OPENRB type_name CLOSERB

   29 unary_operator: BAND
   30               | KSTAR
   31               | PLUS
   32               | MINUS
   33               | TILDA
   34               | NOT

   35 cast_expression: unary_expression
   36                | OPENRB type_name CLOSERB cast_expression

   37 multiplicative_expression: cast_expression
   38                          | multiplicative_expression KSTAR cast_expression
   39                          | multiplicative_expression DIVIDE cast_expression
   40                          | multiplicative_expression MODULO cast_expression

   41 additive_expression: multiplicative_expression
   42                    | additive_expression PLUS multiplicative_expression
   43                    | additive_expression MINUS multiplicative_expression

   44 shift_expression: additive_expression
   45                 | shift_expression LEFTS additive_expression
   46                 | shift_expression RIGHTS additive_expression

   47 relational_expression: shift_expression
   48                      | relational_expression LESSTHAN shift_expression
   49                      | relational_expression GREATERTHAN shift_expression
   50                      | relational_expression LESSEQUAL shift_expression
   51                      | relational_expression GREATEREQUAL shift_expression

   52 equality_expression: relational_expression
   53                    | equality_expression EQUALEQUAL relational_expression
   54                    | equality_expression NOTEQUAL relational_expression

   55 and_expression: equality_expression
   56               | and_expression BAND equality_expression

   57 exclusive_or_expression: and_expression
   58                        | exclusive_or_expression XOR and_expression

   59 inclusive_or_expression: exclusive_or_expression
   60                        | inclusive_or_expression BITWISEOR exclusive_or_expression

   61 logical_and_expression: inclusive_or_expression
   62                       | logical_and_expression AND M inclusive_or_expression

   63 logical_or_expression: logical_and_expression
   64                      | logical_or_expression OR M logical_and_expression

   65 conditional_expression: logical_or_expression
   66                       | logical_or_expression QUESTIONMARK expression COLON conditional_expression

   67 assignment_expression: conditional_expression
   68                      | unary_expression assignment_operator assignment_expression

   69 assignment_operator: EQUAL
   70                    | MULEQUAL
   71                    | DIVEQUAL
   72                    | MODEQUAL
   73                    | PLUSEQUAL
   74                    | MINUSEQUAL
   75                    | SHIFTLEQUAL
   76                    | SHIFTREQUAL
   77                    | ANDEQUAL
   78                    | XOREQUAL
   79                    | OREQUAL

   80 expression: assignment_expression
   81           | expression COMMA assignment_expression

   82 constant_expression: conditional_expression

   83 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   84 init_declarator_list_opt: init_declarator_list
   85                         | ε

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   87                       | type_specifier declaration_specifiers_opt
   88                       | type_qualifier declaration_specifiers_opt
   89                       | function_specifier declaration_specifiers_opt

   90 declaration_specifiers_opt: declaration_specifiers
   91                           | ε

   92 init_declarator_list: init_declarator
   93                     | init_declarator_list COMMA init_declarator

   94 init_declarator: declarator
   95                | declarator EQUAL initializer

   96 storage_class_specifier: EXTERN
   97                        | STATIC
   98                        | AUTO
   99                        | REGISTER

  100 type_specifier: VOID
  101               | CHAR
  102               | SHORT
  103               | INT
  104               | LONG
  105               | FLOAT
  106               | DOUBLE
  107               | SIGNED
  108               | UNSIGNED
  109               | _BOOL
  110               | _COMPLEX
  111               | _IMAGINARY
  112               | enum_specifier
  113               | struct_or_union_specifier

  114 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  115                         | type_qualifier specifier_qualifier_list_opt

  116 specifier_qualifier_list_opt: specifier_qualifier_list
  117                             | ε

  118 struct_or_union_specifier: struct_or_union OPENCB struct_declaration_list CLOSECB
  119                          | struct_or_union IDENTIFIER OPENCB struct_declaration_list CLOSECB
  120                          | struct_or_union IDENTIFIER

  121 struct_or_union: STRUCT
  122                | UNION

  123 struct_declaration_list: struct_declaration
  124                        | struct_declaration_list struct_declaration

  125 struct_declaration: specifier_qualifier_list SEMICOLON
  126                   | specifier_qualifier_list struct_declarator_list SEMICOLON

  127 struct_declarator_list: struct_declarator
  128                       | struct_declarator_list COMMA struct_declarator

  129 struct_declarator: COLON constant_expression
  130                  | declarator COLON constant_expression
  131                  | declarator

  132 enum_specifier: ENUM identifier_opt OPENCB enumerator_list CLOSECB
  133               | ENUM identifier_opt OPENCB enumerator_list COMMA CLOSECB
  134               | ENUM IDENTIFIER

  135 identifier_opt: IDENTIFIER
  136               | ε

  137 enumerator_list: enumerator
  138                | enumerator_list COMMA enumerator

  139 enumerator: IDENTIFIER
  140           | IDENTIFIER EQUAL constant_expression

  141 type_qualifier: CONST
  142               | RESTRICT
  143               | VOLATILE

  144 function_specifier: INLINE

  145 declarator: pointer direct_declarator
  146           | direct_declarator

  147 direct_declarator: IDENTIFIER
  148                  | OPENRB declarator CLOSERB
  149                  | direct_declarator OPENSB type_qualifier_list assignment_expression CLOSESB
  150                  | direct_declarator OPENSB type_qualifier_list CLOSESB
  151                  | direct_declarator OPENSB assignment_expression CLOSESB
  152                  | direct_declarator OPENSB CLOSESB
  153                  | direct_declarator OPENSB STATIC type_qualifier_list assignment_expression CLOSESB
  154                  | direct_declarator OPENSB STATIC assignment_expression CLOSESB
  155                  | direct_declarator OPENSB type_qualifier_list KSTAR CLOSESB
  156                  | direct_declarator OPENSB KSTAR CLOSESB
  157                  | direct_declarator OPENRB FUN_CT parameter_type_list CLOSERB
  158                  | direct_declarator OPENRB identifier_list CLOSERB
  159                  | direct_declarator OPENRB FUN_CT CLOSERB

  160 type_qualifier_list_opt: type_qualifier_list
  161                        | ε

  162 pointer: KSTAR type_qualifier_list_opt
  163        | KSTAR type_qualifier_list_opt pointer

  164 type_qualifier_list: type_qualifier
  165                    | type_qualifier_list type_qualifier

  166 parameter_type_list: parameter_list
  167                    | parameter_list COMMA DOTDOTDOT

  168 parameter_list: parameter_declaration
  169               | parameter_list COMMA parameter_declaration

  170 parameter_declaration: declaration_specifiers declarator
  171                      | declaration_specifiers

  172 identifier_list: IDENTIFIER
  173                | identifier_list COMMA IDENTIFIER

  174 type_name: specifier_qualifier_list

  175 initializer: assignment_expression
  176            | OPENCB initializer_list CLOSECB
  177            | OPENCB initializer_list COMMA CLOSECB

  178 initializer_list: designation_opt initializer
  179                 | initializer_list COMMA designation_opt initializer

  180 designation_opt: designation
  181                | ε

  182 designation: designator_list EQUAL

  183 designator_list: designator
  184                | designator_list designator

  185 designator: OPENSB constant_expression CLOSESB
  186           | DOT IDENTIFIER

  187 statement: labeled_statement
  188          | compound_statement
  189          | expression_statement
  190          | selection_statement
  191          | iteration_statement
  192          | jump_statement

  193 loop_statement: labeled_statement
  194               | expression_statement
  195               | selection_statement
  196               | iteration_statement
  197               | jump_statement

  198 labeled_statement: IDENTIFIER COLON M statement
  199                  | CASE constant_expression COLON statement
  200                  | DEFAULT COLON statement

  201 compound_statement: OPENCB X changetable block_item_list_opt CLOSECB

  202 block_item_list: block_item
  203                | block_item_list M block_item

  204 block_item_list_opt: block_item_list
  205                    | ε

  206 block_item: declaration
  207           | statement

  208 expression_statement: SEMICOLON
  209                     | expression SEMICOLON

  210 selection_statement: IF OPENRB expression CLOSERB M statement N
  211                    | IF OPENRB expression CLOSERB M statement N ELSE M statement
  212                    | SWITCH OPENRB expression CLOSERB statement

  213 iteration_statement: WHILE W OPENRB X changetable M expression CLOSERB M loop_statement
  214                    | WHILE W OPENRB X changetable M expression CLOSERB OPENCB M block_item_list_opt CLOSECB
  215                    | DO D M loop_statement M WHILE OPENRB expression CLOSERB SEMICOLON
  216                    | DO D OPENCB M block_item_list_opt CLOSECB M WHILE OPENRB expression CLOSERB SEMICOLON
  217                    | FOR F OPENRB X changetable declaration M expression_statement M expression N CLOSERB M loop_statement
  218                    | FOR F OPENRB X changetable expression_statement M expression_statement M expression N CLOSERB M loop_statement
  219                    | FOR F OPENRB X changetable declaration M expression_statement M expression N CLOSERB M OPENCB block_item_list_opt CLOSECB
  220                    | FOR F OPENRB X changetable expression_statement M expression_statement M expression N CLOSERB M OPENCB block_item_list_opt CLOSECB

  221 jump_statement: GOTO IDENTIFIER SEMICOLON
  222               | CONTINUE SEMICOLON
  223               | BREAK SEMICOLON
  224               | RETURN expression SEMICOLON
  225               | RETURN SEMICOLON

  226 translation_unit: external_declaration
  227                 | translation_unit external_declaration

  228 external_declaration: function_definition
  229                     | declaration

  230 function_definition: declaration_specifiers declarator declaration_list_opt FUN_CT OPENCB block_item_list_opt CLOSECB

  231 declaration_list_opt: declaration_list
  232                     | ε

  233 declaration_list: declaration
  234                 | declaration_list declaration

  235 M: ε

  236 F: ε

  237 W: ε

  238 D: ε

  239 X: ε

  240 N: ε

  241 FUN_CT: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    OTHERS (258)
    AUTO (259) 98
    BREAK (260) 223
    CASE (261) 199
    CHAR (262) 101
    CONST (263) 141
    CONTINUE (264) 222
    DEFAULT (265) 200
    DO (266) 215 216
    DOUBLE (267) 106
    ELSE (268) 211
    ENUM (269) 132 133 134
    EXTERN (270) 96
    REGISTER (271) 99
    FLOAT (272) 105
    FOR (273) 217 218 219 220
    GOTO (274) 221
    IF (275) 210 211
    INLINE (276) 144
    INT (277) 103
    LONG (278) 104
    RESTRICT (279) 142
    RETURN (280) 224 225
    SHORT (281) 102
    SIGNED (282) 107
    SIZEOF (283) 27 28
    STATIC (284) 97 153 154
    STRUCT (285) 121
    SWITCH (286) 212
    TYPEDEF (287)
    UNION (288) 122
    UNSIGNED (289) 108
    VOID (290) 100
    VOLATILE (291) 143
    WHILE (292) 213 214 215 216
    _BOOL (293) 109
    _COMPLEX (294) 110
    _IMAGINARY (295) 111
    IDENTIFIER <symp> (296) 6 13 14 119 120 134 135 139 140 147 172 173 186 198 221
    INTEGER_CONST <int_val> (297) 2
    CHAR_CONST <char_val> (298) 4
    FLOAT_CONST <float_val> (299) 3
    STRING_LITERAL <char_val> (300) 5 8
    OPENSB (301) 11 149 150 151 152 153 154 155 156 185
    CLOSESB (302) 11 149 150 151 152 153 154 155 156 185
    OPENRB (303) 9 12 17 18 28 36 148 157 158 159 210 211 212 213 214 215 216 217 218 219 220
    CLOSERB (304) 9 12 17 18 28 36 148 157 158 159 210 211 212 213 214 215 216 217 218 219 220
    OPENCB (305) 17 18 118 119 132 133 176 177 201 214 216 219 220 230
    CLOSECB (306) 17 18 118 119 132 133 176 177 201 214 216 219 220 230
    DOT (307) 13 186
    RIGHTARROW (308) 14
    PLUSPLUS (309) 15 24
    MINUSMINS (310) 16 25
    BAND (311) 29 56
    KSTAR (312) 30 38 155 156 162 163
    PLUS (313) 31 42
    MINUS (314) 32 43
    TILDA (315) 33
    NOT (316) 34
    DIVIDE (317) 39
    MODULO (318) 40
    LEFTS (319) 45
    RIGHTS (320) 46
    LESSTHAN (321) 48
    GREATERTHAN (322) 49
    LESSEQUAL (323) 50
    GREATEREQUAL (324) 51
    EQUALEQUAL (325) 53
    NOTEQUAL (326) 54
    XOR (327) 58
    BITWISEOR (328) 60
    AND (329) 62
    OR (330) 64
    QUESTIONMARK (331) 66
    COLON (332) 66 129 130 198 199 200
    SEMICOLON (333) 83 125 126 208 209 215 216 221 222 223 224 225
    DOTDOTDOT (334) 167
    EQUAL (335) 69 95 140 182
    MULEQUAL (336) 70
    DIVEQUAL (337) 71
    MODEQUAL (338) 72
    PLUSEQUAL (339) 73
    MINUSEQUAL (340) 74
    SHIFTLEQUAL (341) 75
    SHIFTREQUAL (342) 76
    ANDEQUAL (343) 77
    XOREQUAL (344) 78
    OREQUAL (345) 79
    COMMA (346) 18 20 81 93 128 133 138 167 169 173 177 179
    HASH (347)
    "then" (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    changetable (95)
        on left: 1
        on right: 201 213 214 217 218 219 220
    constant <expr> (96)
        on left: 2 3 4 5
        on right: 7
    primary_expression <expr> (97)
        on left: 6 7 8 9
        on right: 10
    postfix_expression <A> (98)
        on left: 10 11 12 13 14 15 16 17 18
        on right: 11 12 13 14 15 16 23
    argument_expression_list <num_params> (99)
        on left: 19 20
        on right: 20 21
    argument_expression_list_opt <num_params> (100)
        on left: 21 22
        on right: 12
    unary_expression <A> (101)
        on left: 23 24 25 26 27 28
        on right: 24 25 27 35 68
    unary_operator <unaryOp> (102)
        on left: 29 30 31 32 33 34
        on right: 26
    cast_expression <A> (103)
        on left: 35 36
        on right: 26 36 37 38 39 40
    multiplicative_expression <expr> (104)
        on left: 37 38 39 40
        on right: 38 39 40 41 42 43
    additive_expression <expr> (105)
        on left: 41 42 43
        on right: 42 43 44 45 46
    shift_expression <expr> (106)
        on left: 44 45 46
        on right: 45 46 47 48 49 50 51
    relational_expression <expr> (107)
        on left: 47 48 49 50 51
        on right: 48 49 50 51 52 53 54
    equality_expression <expr> (108)
        on left: 52 53 54
        on right: 53 54 55 56
    and_expression <expr> (109)
        on left: 55 56
        on right: 56 57 58
    exclusive_or_expression <expr> (110)
        on left: 57 58
        on right: 58 59 60
    inclusive_or_expression <expr> (111)
        on left: 59 60
        on right: 60 61 62
    logical_and_expression <expr> (112)
        on left: 61 62
        on right: 62 63 64
    logical_or_expression <expr> (113)
        on left: 63 64
        on right: 64 65 66
    conditional_expression <expr> (114)
        on left: 65 66
        on right: 66 67 82
    assignment_expression <expr> (115)
        on left: 67 68
        on right: 19 20 68 80 81 149 151 153 154 175
    assignment_operator (116)
        on left: 69 70 71 72 73 74 75 76 77 78 79
        on right: 68
    expression <expr> (117)
        on left: 80 81
        on right: 9 11 66 81 209 210 211 212 213 214 215 216 217 218 219 220 224
    constant_expression (118)
        on left: 82
        on right: 129 130 140 185 199
    declaration (119)
        on left: 83
        on right: 206 217 219 229 233 234
    init_declarator_list_opt (120)
        on left: 84 85
        on right: 83
    declaration_specifiers (121)
        on left: 86 87 88 89
        on right: 83 90 170 171 230
    declaration_specifiers_opt (122)
        on left: 90 91
        on right: 86 87 88 89
    init_declarator_list (123)
        on left: 92 93
        on right: 84 93
    init_declarator <symp> (124)
        on left: 94 95
        on right: 92 93
    storage_class_specifier (125)
        on left: 96 97 98 99
        on right: 86
    type_specifier (126)
        on left: 100 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 87 114
    specifier_qualifier_list (127)
        on left: 114 115
        on right: 116 125 126 174
    specifier_qualifier_list_opt (128)
        on left: 116 117
        on right: 114 115
    struct_or_union_specifier (129)
        on left: 118 119 120
        on right: 113
    struct_or_union (130)
        on left: 121 122
        on right: 118 119 120
    struct_declaration_list (131)
        on left: 123 124
        on right: 118 119 124
    struct_declaration (132)
        on left: 125 126
        on right: 123 124
    struct_declarator_list (133)
        on left: 127 128
        on right: 126 128
    struct_declarator (134)
        on left: 129 130 131
        on right: 127 128
    enum_specifier (135)
        on left: 132 133 134
        on right: 112
    identifier_opt (136)
        on left: 135 136
        on right: 132 133
    enumerator_list (137)
        on left: 137 138
        on right: 132 133 138
    enumerator (138)
        on left: 139 140
        on right: 137 138
    type_qualifier (139)
        on left: 141 142 143
        on right: 88 115 164 165
    function_specifier (140)
        on left: 144
        on right: 89
    declarator <symp> (141)
        on left: 145 146
        on right: 94 95 130 131 148 170 230
    direct_declarator <symp> (142)
        on left: 147 148 149 150 151 152 153 154 155 156 157 158 159
        on right: 145 146 149 150 151 152 153 154 155 156 157 158 159
    type_qualifier_list_opt (143)
        on left: 160 161
        on right: 162 163
    pointer <sym_type> (144)
        on left: 162 163
        on right: 145 163
    type_qualifier_list (145)
        on left: 164 165
        on right: 149 150 153 155 160 165
    parameter_type_list (146)
        on left: 166 167
        on right: 157
    parameter_list (147)
        on left: 168 169
        on right: 166 167 169
    parameter_declaration (148)
        on left: 170 171
        on right: 168 169
    identifier_list (149)
        on left: 172 173
        on right: 158 173
    type_name (150)
        on left: 174
        on right: 17 18 28 36
    initializer <symp> (151)
        on left: 175 176 177
        on right: 95 178 179
    initializer_list (152)
        on left: 178 179
        on right: 17 18 176 177 179
    designation_opt (153)
        on left: 180 181
        on right: 178 179
    designation (154)
        on left: 182
        on right: 180
    designator_list (155)
        on left: 183 184
        on right: 182 184
    designator (156)
        on left: 185 186
        on right: 183 184
    statement <stat> (157)
        on left: 187 188 189 190 191 192
        on right: 198 199 200 207 210 211 212
    loop_statement <stat> (158)
        on left: 193 194 195 196 197
        on right: 213 215 217 218
    labeled_statement <stat> (159)
        on left: 198 199 200
        on right: 187 193
    compound_statement <stat> (160)
        on left: 201
        on right: 188
    block_item_list <stat> (161)
        on left: 202 203
        on right: 203 204
    block_item_list_opt <stat> (162)
        on left: 204 205
        on right: 201 214 216 219 220 230
    block_item <stat> (163)
        on left: 206 207
        on right: 202 203
    expression_statement <expr> (164)
        on left: 208 209
        on right: 189 194 217 218 219 220
    selection_statement <stat> (165)
        on left: 210 211 212
        on right: 190 195
    iteration_statement <stat> (166)
        on left: 213 214 215 216 217 218 219 220
        on right: 191 196
    jump_statement <stat> (167)
        on left: 221 222 223 224 225
        on right: 192 197
    translation_unit (168)
        on left: 226 227
        on right: 0 227
    external_declaration (169)
        on left: 228 229
        on right: 226 227
    function_definition (170)
        on left: 230
        on right: 228
    declaration_list_opt (171)
        on left: 231 232
        on right: 230
    declaration_list (172)
        on left: 233 234
        on right: 231 234
    M <instr_number> (173)
        on left: 235
        on right: 62 64 198 203 210 211 213 214 215 216 217 218 219 220
    F (174)
        on left: 236
        on right: 217 218 219 220
    W (175)
        on left: 237
        on right: 213 214
    D (176)
        on left: 238
        on right: 215 216
    X (177)
        on left: 239
        on right: 201 213 214 217 218 219 220
    N <stat> (178)
        on left: 240
        on right: 210 211 217 218 219 220
    FUN_CT (179)
        on left: 241
        on right: 157 159 230


State 0

    0 $accept: • translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    REGISTER    shift, and go to state 7
    FLOAT       shift, and go to state 8
    INLINE      shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    UNSIGNED    shift, and go to state 18
    VOID        shift, and go to state 19
    VOLATILE    shift, and go to state 20
    _BOOL       shift, and go to state 21
    _COMPLEX    shift, and go to state 22
    _IMAGINARY  shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    translation_unit           go to state 33
    external_declaration       go to state 34
    function_definition        go to state 35


State 1

   98 storage_class_specifier: AUTO •

    $default  reduce using rule 98 (storage_class_specifier)


State 2

  101 type_specifier: CHAR •

    $default  reduce using rule 101 (type_specifier)


State 3

  141 type_qualifier: CONST •

    $default  reduce using rule 141 (type_qualifier)


State 4

  106 type_specifier: DOUBLE •

    $default  reduce using rule 106 (type_specifier)


State 5

  132 enum_specifier: ENUM • identifier_opt OPENCB enumerator_list CLOSECB
  133               | ENUM • identifier_opt OPENCB enumerator_list COMMA CLOSECB
  134               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 36

    $default  reduce using rule 136 (identifier_opt)

    identifier_opt  go to state 37


State 6

   96 storage_class_specifier: EXTERN •

    $default  reduce using rule 96 (storage_class_specifier)


State 7

   99 storage_class_specifier: REGISTER •

    $default  reduce using rule 99 (storage_class_specifier)


State 8

  105 type_specifier: FLOAT •

    $default  reduce using rule 105 (type_specifier)


State 9

  144 function_specifier: INLINE •

    $default  reduce using rule 144 (function_specifier)


State 10

  103 type_specifier: INT •

    $default  reduce using rule 103 (type_specifier)


State 11

  104 type_specifier: LONG •

    $default  reduce using rule 104 (type_specifier)


State 12

  142 type_qualifier: RESTRICT •

    $default  reduce using rule 142 (type_qualifier)


State 13

  102 type_specifier: SHORT •

    $default  reduce using rule 102 (type_specifier)


State 14

  107 type_specifier: SIGNED •

    $default  reduce using rule 107 (type_specifier)


State 15

   97 storage_class_specifier: STATIC •

    $default  reduce using rule 97 (storage_class_specifier)


State 16

  121 struct_or_union: STRUCT •

    $default  reduce using rule 121 (struct_or_union)


State 17

  122 struct_or_union: UNION •

    $default  reduce using rule 122 (struct_or_union)


State 18

  108 type_specifier: UNSIGNED •

    $default  reduce using rule 108 (type_specifier)


State 19

  100 type_specifier: VOID •

    $default  reduce using rule 100 (type_specifier)


State 20

  143 type_qualifier: VOLATILE •

    $default  reduce using rule 143 (type_qualifier)


State 21

  109 type_specifier: _BOOL •

    $default  reduce using rule 109 (type_specifier)


State 22

  110 type_specifier: _COMPLEX •

    $default  reduce using rule 110 (type_specifier)


State 23

  111 type_specifier: _IMAGINARY •

    $default  reduce using rule 111 (type_specifier)


State 24

  229 external_declaration: declaration •

    $default  reduce using rule 229 (external_declaration)


State 25

   83 declaration: declaration_specifiers • init_declarator_list_opt SEMICOLON
  230 function_definition: declaration_specifiers • declarator declaration_list_opt FUN_CT OPENCB block_item_list_opt CLOSECB

    IDENTIFIER  shift, and go to state 38
    OPENRB      shift, and go to state 39
    KSTAR       shift, and go to state 40

    $default  reduce using rule 85 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 41
    init_declarator_list      go to state 42
    init_declarator           go to state 43
    declarator                go to state 44
    direct_declarator         go to state 45
    pointer                   go to state 46


State 26

   86 declaration_specifiers: storage_class_specifier • declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    REGISTER    shift, and go to state 7
    FLOAT       shift, and go to state 8
    INLINE      shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    UNSIGNED    shift, and go to state 18
    VOID        shift, and go to state 19
    VOLATILE    shift, and go to state 20
    _BOOL       shift, and go to state 21
    _COMPLEX    shift, and go to state 22
    _IMAGINARY  shift, and go to state 23

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 48
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 27

   87 declaration_specifiers: type_specifier • declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    REGISTER    shift, and go to state 7
    FLOAT       shift, and go to state 8
    INLINE      shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    UNSIGNED    shift, and go to state 18
    VOID        shift, and go to state 19
    VOLATILE    shift, and go to state 20
    _BOOL       shift, and go to state 21
    _COMPLEX    shift, and go to state 22
    _IMAGINARY  shift, and go to state 23

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 49
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 28

  113 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 113 (type_specifier)


State 29

  118 struct_or_union_specifier: struct_or_union • OPENCB struct_declaration_list CLOSECB
  119                          | struct_or_union • IDENTIFIER OPENCB struct_declaration_list CLOSECB
  120                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 50
    OPENCB      shift, and go to state 51


State 30

  112 type_specifier: enum_specifier •

    $default  reduce using rule 112 (type_specifier)


State 31

   88 declaration_specifiers: type_qualifier • declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    REGISTER    shift, and go to state 7
    FLOAT       shift, and go to state 8
    INLINE      shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    UNSIGNED    shift, and go to state 18
    VOID        shift, and go to state 19
    VOLATILE    shift, and go to state 20
    _BOOL       shift, and go to state 21
    _COMPLEX    shift, and go to state 22
    _IMAGINARY  shift, and go to state 23

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 52
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 32

   89 declaration_specifiers: function_specifier • declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    REGISTER    shift, and go to state 7
    FLOAT       shift, and go to state 8
    INLINE      shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    UNSIGNED    shift, and go to state 18
    VOID        shift, and go to state 19
    VOLATILE    shift, and go to state 20
    _BOOL       shift, and go to state 21
    _COMPLEX    shift, and go to state 22
    _IMAGINARY  shift, and go to state 23

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 53
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 33

    0 $accept: translation_unit • $end
  227 translation_unit: translation_unit • external_declaration

    $end        shift, and go to state 54
    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    REGISTER    shift, and go to state 7
    FLOAT       shift, and go to state 8
    INLINE      shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    STRUCT      shift, and go to state 16
    UNION       shift, and go to state 17
    UNSIGNED    shift, and go to state 18
    VOID        shift, and go to state 19
    VOLATILE    shift, and go to state 20
    _BOOL       shift, and go to state 21
    _COMPLEX    shift, and go to state 22
    _IMAGINARY  shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    external_declaration       go to state 55
    function_definition        go to state 35


State 34

  226 translation_unit: external_declaration •

    $default  reduce using rule 226 (translation_unit)


State 35

  228 external_declaration: function_definition •

    $default  reduce using rule 228 (external_declaration)


State 36

  134 enum_specifier: ENUM IDENTIFIER •
  135 identifier_opt: IDENTIFIER •

    OPENCB    reduce using rule 135 (identifier_opt)
    $default  reduce using rule 134 (enum_specifier)


State 37

  132 enum_specifier: ENUM identifier_opt • OPENCB enumerator_list CLOSECB
  133               | ENUM identifier_opt • OPENCB enumerator_list COMMA CLOSECB

    OPENCB  shift, and go to state 56


State 38

  147 direct_declarator: IDENTIFIER •

    $default  reduce using rule 147 (direct_declarator)


State 39
